fix: add text-align: right to .media on tablet

--- a/scss/objects/_header.scss
+++ b/scss/objects/_header.scss
@@ -22,6 +22,7 @@ header {
         width: 28px;
         height: 28px;
     }
+    // 雪碧圖
     a:nth-child(1) {
         &:hover {
             background-position: 0 -27px;
@@ -58,5 +59,6 @@ header {
     }
     @include mediaquery-tablet {
         float: right;
+        text-align: right;
     }
 }
